@@ -3,6 +3,8 @@ package com.pacvue.segment.event.client;
 import lombok.Builder;
 import lombok.NonNull;
 import lombok.extern.slf4j.Slf4j;
+import org.apache.ibatis.executor.BatchResult;
+import org.apache.ibatis.session.ExecutorType;
 import org.apache.ibatis.session.SqlSession;
 import org.apache.ibatis.session.SqlSessionFactory;
 import reactor.core.publisher.Mono;
@@ -26,13 +28,26 @@ public class SegmentEventClientMybatisFlex<T, D> extends AbstractBufferSegmentEv
     private final Class<? extends BaseMapper<D>> mapperClass;
     @NonNull
     private final Function<T, D> argumentsConverter;
+    @Builder.Default
+    private boolean isSupportValues = false;
 
     @Override
     public Mono<Boolean> send(List<T> events) {
         return Mono.fromCallable(() -> {
-            try (SqlSession sqlSession = sqlSessionFactory.openSession()) {
+            try (SqlSession sqlSession = sqlSessionFactory.openSession(ExecutorType.BATCH)) {
                 BaseMapper<D> mapper = sqlSession.getMapper(mapperClass);
-                int result = mapper.insertBatch(events.stream().map(argumentsConverter).collect(Collectors.toList()));
+
+                List<D> convertedList = events.stream()
+                        .map(argumentsConverter)
+                        .toList();
+                int result = 0;
+                if (isSupportValues) {
+                    result = mapper.insertBatch(events.stream().map(argumentsConverter).collect(Collectors.toList()), events.size());
+                } else {
+                    convertedList.forEach(mapper::insert);
+                    // 执行批处理并提交
+                    result = sqlSession.flushStatements().size();
+                }
                 sqlSession.commit();
                 log.debug("Batch insert completed: {} records inserted", result);
                 return result == events.size();
